--- a/housing_analysis.Rmd
+++ b/housing_analysis.Rmd
@@ -107,7 +107,7 @@ housing <- read_csv("housing.csv")
 
 In this data analysis project, I delved into Poland's housing market by gathering data through web scraping from a dedicated website. Leveraging web scraping techniques, I efficiently collected vital information on rental prices, property sizes, and geographical details. To expedite the process, I saved the extracted data to a CSV file for future reference.
 
-Once the data collection was complete, I embarked on a rigorous data cleaning process to ensure the dataset's accuracy and consistency. Addressing missing values, converting data to appropriate formats, handling outliers, and resolving inconsistencies were key steps in this process. While I have omitted the specific code details in this report, rest assured that each step was meticulously executed to provide reliable and accurate data for my analysis. By optimizing my data collection and cleaning methods, I maximized efficiency and gained valuable insights into the complexities of Poland's housing market.
+Once the data collection was complete, I embarked on a rigorous data cleaning process to ensure the dataset's accuracy and consistency. Addressing missing values, converting data to appropriate formats, handling outliers, and resolving inconsistencies were key steps in this process. While I have omitted the specific code details in this report (Full code can found [here](https://github.com/dabowski/housing_in_poland/blob/main/housing_analysis.Rmd)), rest assured that each step was meticulously executed to provide reliable and accurate data for my analysis. By optimizing my data collection and cleaning methods, I maximized efficiency and gained valuable insights into the complexities of Poland's housing market.
 
 ## What is the most common size of the apartment?
 ```{r, echo=FALSE, message=FALSE}
